Gradle: Allow Kotest's `withEnvironment()` to work with Java 17
For more background information see [1].

[1]: https://github.com/kotest/kotest/issues/3035

Co-authored-by: Martin Nonnenmacher <martin.nonnenmacher@bosch.io>
Signed-off-by: Sebastian Schuberth <sschuberth@gmail.com>